Feat: Add User class

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body no-padding">
-              <table class="table table-striped" id="table-users">
+              <table class="table table-striped">
                 <thead>
                   <tr>
                     <th style="width: 10px">Foto</th>
@@ -150,7 +150,7 @@
                     <th>Ações</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody  id="table-users">
 
                 </tbody>
               </table>
@@ -514,6 +514,7 @@
   </footer>
 
 </div>
+<script src="models/User.js"></script>
 <script src="index.js">
 </script>
 </body>
