--- a/index.html
+++ b/index.html
@@ -514,7 +514,9 @@
   </footer>
 
 </div>
+
 <script src="models/User.js"></script>
+<script src="controllers/UserControllers.js"></script>
 <script src="index.js">
 </script>
 </body>
