Feat: Add static methods to format dates

--- a/index.html
+++ b/index.html
@@ -515,6 +515,8 @@
 
 </div>
 
+
+<script src="classes/Utils.js"></script>
 <script src="models/User.js"></script>
 <script src="controllers/UserControllers.js"></script>
 <script src="index.js">
